--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
       <div id="content"></div>
     </div>
     <script src="./js/seed.js"></script>
+    <script src="./js/app.js"></script>
     <script
     type="text/babel"
     data-plugins="transform-class-properties"
